--- a/question1.html
+++ b/question1.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Question 1</title>
+  <title>Question 2</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -13,7 +13,14 @@
 </head>
 <body>
   <nav>
-    <a href='./highscore.html'>View Highscores</a>
+    <div class="row">
+      <div class="col-sm-6">
+        <a href='./highscore.html'>View Highscores</a>
+      </div>
+      <div class="col-sm-6">
+        <p id="timer">Time: 0</p>
+      </div>
+    </div>
   </nav>
   <main>
     <h2>Commonly used data types DO NOT include:</h2>
@@ -38,6 +45,6 @@
   </main>
     <div id='ans'></div>
 
-  <script src='app.js'></script>
+  <script src='app1.js'></script>
 </body>
 </html>
