--- a/finish.html
+++ b/finish.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Question 3</title>
+  <title>Question 1</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -14,41 +14,26 @@
 </head>
 
 <body>
-  
   <nav>
     <div class="row">
       <div class="col-sm-6">
         <a href='./highscore.html'>View Highscores</a>
       </div>
       <div class="col-sm-6">
-        <p id="timer">Time: </p>
+        <p id="timer">Time: 0</p>
       </div>
     </div>
   </nav>
 
   <main>
 
-    <h2>Arrays in JavaScript can be used to store ___.</h2>
-    <div id='btns3'>
-      <form action="question4.html">
-        <div class='row'>
-          <div class='col-sm-12'>
-            <button class='ansChoice1'>1. numbers and strings</button>
-          </div>
-          <div class='col-sm-12'>
-            <button class='ansChoice2'>2. other arrays</button>
-          </div>
-          <div class='col-sm-12'>
-            <button class='ansChoice3'>3. booleans</button>
-          </div>
-          <div class='col-sm-12'>
-            <button class='ansChoice4'>4. all of the above</button>
-          </div>
-        </div>
-      </form>
-    </div>
-
-    <div id='ans3'></div>
+    <h2>All done!</h2>
+    <p></p>
+    <form action="highscore.html">
+      <label for="name">Enter initials: </label>
+      <input type="text" id="initials">
+      <button id="submit">Submit</button>
+    </form>
   </main>
 
   <script src='app.js'></script>
