--- a/highscore.html
+++ b/highscore.html
@@ -11,5 +11,16 @@
 </head>
 <body>
   
+  <main>
+    <h2>Highscores</h2>
+    <div id="highscores"></div>
+    <form>
+      <button id="goBack">Go Back</button>
+      <button id="clear">Clear Highscores</button>
+    </form>
+  </main>
+
+  <script src='app.js'></script>
+  
 </body>
 </html>
