--- a/question1.html
+++ b/question1.html
@@ -4,14 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Question 2</title>
+  <title>Question 1</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-  <link rel='stylesheet' href='./style1.css'
+  <link rel='stylesheet' href='./style1.css'>
 </head>
 <body>
+  
   <nav>
     <div class="row">
       <div class="col-sm-6">
@@ -22,29 +23,33 @@
       </div>
     </div>
   </nav>
+
   <main>
+
     <h2>Commonly used data types DO NOT include:</h2>
-  <div id='btns'>
-
-    <div class='row'>
-      <div class='col-sm-12'>
-        <button class='ansChoice1'>1. strings</button>
-      </div>
-      <div class='col-sm-12'>
-        <button class='ansChoice2'>2. booleans</button>
-      </div>
-      <div class='col-sm-12'>
-        <button class='ansChoice3'>3. alerts</button>
-      </div>
-      <div class='col-sm-12'>
-        <button class='ansChoice4'>4. numbers</button>
-      </div>
-    </div>
-  
+    <div id='btns1'>
+      <form action="question2.html">
+        <div class='row'>
+          <div class='col-sm-12'>
+            <button class='ansChoice1'>1. strings</button>
+          </div>
+          <div class='col-sm-12'>
+            <button class='ansChoice2'>2. booleans</button>
+          </div>
+          <div class='col-sm-12'>
+            <button class='ansChoice3'>3. alerts</button>
+          </div>
+          <div class='col-sm-12'>
+            <button class='ansChoice4'>4. numbers</button>
+          </div>
+        </div>
+    </form>
   </div>
-  </main>
-    <div id='ans'></div>
 
-  <script src='app1.js'></script>
+  <div id='ans1'></div>
+  </main>
+    
+  <script src='app.js'></script>
+
 </body>
 </html>
