--- a/question2.html
+++ b/question2.html
@@ -5,48 +5,54 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Question 1</title>
+  <title>Question 2</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-  <link rel='stylesheet' href='./style1.css' </head>
+  <link rel='stylesheet' href='./style1.css'>
+</head>
 
 <body>
+  
   <nav>
     <div class="row">
       <div class="col-sm-6">
         <a href='./highscore.html'>View Highscores</a>
       </div>
       <div class="col-sm-6">
-        <p id="timer">Time: 0</p>
+        <p id="timer">Time: </p>
       </div>
     </div>
   </nav>
+
   <main>
-    <h2>The condition in an if / else statment is enclosed within ____.</h2>
-    <div id='btns'>
 
-      <div class='row'>
-        <div class='col-sm-12'>
-          <button class='ansChoice1'>1. quotes</button>
+    <h2>The condition in an if/else statement is enclosed within ____.</h2>
+    <div id='btns2'>
+      <form action="question3.html">
+        <div class='row'>
+          <div class='col-sm-12'>
+            <button class='ansChoice1'>1. quotes</button>
+          </div>
+          <div class='col-sm-12'>
+            <button class='ansChoice2'>2. curly brackets</button>
+          </div>
+          <div class='col-sm-12'>
+            <button class='ansChoice3'>3. parentheses</button>
+          </div>
+          <div class='col-sm-12'>
+            <button class='ansChoice4'>4. square brackets</button>
+          </div>
         </div>
-        <div class='col-sm-12'>
-          <button class='ansChoice2'>2. curly brackets</button>
-        </div>
-        <div class='col-sm-12'>
-          <button class='ansChoice3'>3. parantheses</button>
-        </div>
-        <div class='col-sm-12'>
-          <button class='ansChoice4'>4. square brackets</button>
-        </div>
-      </div>
-
+      </form>
     </div>
-  </main>
-  <div id='ans'></div>
 
-  <script src='app2.js'></script>
+    <div id='ans2'></div>
+  </main>
+
+  <script src='app.js'></script>
+
 </body>
 
 </html>
