--- a/index.html
+++ b/index.html
@@ -3,37 +3,39 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-  <title>Coding Quiz Challenge</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-
   <link rel='stylesheet' href='./style.css'>
 </head>
-<body>
 
+<body>
+  
   <nav>
     <div class="row">
-      <div class="col-sm-6">
-        <a href='./highscore.html'>View Highscores</a>
+      <div class="col-sm-6 hScores">
+        <p>Highscores</p>
       </div>
       <div class="col-sm-6">
-        <p id="timer">Time: 0</p>
+        <p id="timer">Time: 75</p>
       </div>
     </div>
   </nav>
 
-  <main>
+  <main id="quiz">
     <h2>Coding Quiz Challenge</h2>
-    <p>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!</p>
-    <form action="question1.html">
-      <button type='submit' id='startBtn'>Start Quiz</button> 
-    </form>
+    <p>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will
+    penalize your score/time by ten seconds!</p>
+      <button type='submit' id='startBtn'>Start Quiz</button>
   </main>
 
-  <script src='./app.js'></script>
-  
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+
+  <script src='./test.js'></script>
+
 </body>
 </html>
