--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <nav>
     <div class="row">
       <div class="col-sm-6 hScores">
-        <p>Highscores</p>
+        <p class="showHigh">Highscores</p>
       </div>
       <div class="col-sm-6">
         <p id="timer">Time: 75</p>
@@ -28,7 +28,7 @@
   <main id="quiz">
     <h2>Coding Quiz Challenge</h2>
     <p>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will
-    penalize your score/time by ten seconds!</p>
+    penalize your time by twenty seconds!</p>
       <button type='submit' id='startBtn'>Start Quiz</button>
   </main>
 
